322 feat: implement OAS brp-api-gezag-2.0.yaml