@@ -1,8 +1,10 @@
 package nl.rijksoverheid.mev.gezagsmodule.service;
 
-import nl.rijksoverheid.mev.gezagsmodule.domain.ARAntwoordenModel;
+import nl.rijksoverheid.mev.brp.brpv.generated.tables.records.Lo3PlPersoonRecord;
+import nl.rijksoverheid.mev.gezagsmodule.domain.*;
+import nl.rijksoverheid.mev.gezagsmodule.domain.Persoon;
 import nl.rijksoverheid.mev.gezagsmodule.domain.gezagvraag.GezagsBepaling;
-import nl.rijksoverheid.mev.web.api.v1.*;
+import nl.rijksoverheid.mev.web.api.v2.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -42,7 +44,7 @@ class GezagsrelatieServiceTest {
         ARAntwoordenModel arAntwoordenModel = null;
         GezagsBepaling gezagsBepaling = null;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertTrue(gezagsRelaties.isEmpty());
     }
@@ -52,7 +54,7 @@ class GezagsrelatieServiceTest {
         ARAntwoordenModel arAntwoordenModel = new ARAntwoordenModel();
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertTrue(gezagsRelaties.isEmpty());
     }
@@ -65,7 +67,7 @@ class GezagsrelatieServiceTest {
         arAntwoordenModel.setUitleg(UITLEG);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertTrue(gezagsRelaties.isEmpty());
     }
@@ -78,11 +80,12 @@ class GezagsrelatieServiceTest {
         arAntwoordenModel.setUitleg(UITLEG);
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabette());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertTrue(gezagsRelaties.isEmpty());
     }
@@ -96,17 +99,18 @@ class GezagsrelatieServiceTest {
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
         String ouder1 = BURGERSERVICENUMMER_TWO;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabetteMetOuder1());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerOuder1()).thenReturn(ouder1);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         EenhoofdigOuderlijkGezag gezag = (EenhoofdigOuderlijkGezag) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(ouder1, gezag.getOuder().get().getBurgerservicenummer());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
+        assertEquals(ouder1, gezag.getOuder().getBurgerservicenummer().orElse(""));
     }
 
     @Test
@@ -118,53 +122,15 @@ class GezagsrelatieServiceTest {
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
         String ouder2 = BURGERSERVICENUMMER_TWO;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabetteMetOuder2());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerOuder2()).thenReturn(ouder2);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertTrue(gezagsRelaties.isEmpty());
-    }
-
-    @Test
-    void bepaalGezagsrelatiesWithAntwoordenModelOG2AndHavingNoParents() {
-        ARAntwoordenModel arAntwoordenModel = new ARAntwoordenModel();
-        arAntwoordenModel.setSoortGezag(OG2);
-        arAntwoordenModel.setUitleg(UITLEG);
-        String minderjarige = BURGERSERVICENUMMER_ONE;
-        String bevraagdePersoon = minderjarige;
-        when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
-        when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
-        GezagsBepaling gezagsBepaling = gezagsBepalingMock;
-
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
-
-        assertFalse(gezagsRelaties.isEmpty());
-        GezamenlijkOuderlijkGezag gezag = (GezamenlijkOuderlijkGezag) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-    }
-
-    @Test
-    void bepaalGezagsrelatiesWithAntwoordenModelOG2AndHavingOneParentAsOuder1() {
-        ARAntwoordenModel arAntwoordenModel = new ARAntwoordenModel();
-        arAntwoordenModel.setSoortGezag(OG2);
-        arAntwoordenModel.setUitleg(UITLEG);
-        String minderjarige = BURGERSERVICENUMMER_ONE;
-        String bevraagdePersoon = minderjarige;
-        String ouder1 = BURGERSERVICENUMMER_TWO;
-        when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
-        when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
-        when(gezagsBepalingMock.getBurgerservicenummerOuder1()).thenReturn(ouder1);
-        GezagsBepaling gezagsBepaling = gezagsBepalingMock;
-
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
-
-        assertFalse(gezagsRelaties.isEmpty());
-        GezamenlijkOuderlijkGezag gezag = (GezamenlijkOuderlijkGezag) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(ouder1, gezag.getOuders().get(0).getBurgerservicenummer());
     }
 
     @Test
@@ -176,19 +142,20 @@ class GezagsrelatieServiceTest {
         String bevraagdePersoon = minderjarige;
         String ouder1 = BURGERSERVICENUMMER_TWO;
         String ouder2 = BURGERSERVICENUMMER_THREE;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabetteMetBeideOuders());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerOuder1()).thenReturn(ouder1);
         when(gezagsBepalingMock.getBurgerservicenummerOuder2()).thenReturn(ouder2);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         GezamenlijkOuderlijkGezag gezag = (GezamenlijkOuderlijkGezag) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(ouder1, gezag.getOuders().get(0).getBurgerservicenummer());
-        assertEquals(ouder2, gezag.getOuders().get(1).getBurgerservicenummer());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
+        assertEquals(ouder1, gezag.getOuders().get(0).getBurgerservicenummer().orElse(""));
+        assertEquals(ouder2, gezag.getOuders().get(1).getBurgerservicenummer().orElse(""));
     }
 
     @Test
@@ -200,16 +167,17 @@ class GezagsrelatieServiceTest {
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
         String ouder1 = BURGERSERVICENUMMER_TWO;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabette());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerOuder1()).thenReturn(ouder1);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         Voogdij gezag = (Voogdij) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
     }
 
     @Test
@@ -221,17 +189,18 @@ class GezagsrelatieServiceTest {
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
         String nietOuder = BURGERSERVICENUMMER_TWO;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabette());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerNietOuder()).thenReturn(nietOuder);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         Voogdij gezag = (Voogdij) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(nietOuder, gezag.getDerden().get(0).getBurgerservicenummer().get());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
+        assertEquals(nietOuder, gezag.getDerden().getFirst().getBurgerservicenummer().orElse(""));
     }
 
     @Test
@@ -243,17 +212,18 @@ class GezagsrelatieServiceTest {
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
         String nietOuder = BURGERSERVICENUMMER_TWO;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabette());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerNietOuder()).thenReturn(nietOuder);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         Voogdij gezag = (Voogdij) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(nietOuder, gezag.getDerden().get(0).getBurgerservicenummer().get());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
+        assertEquals(nietOuder, gezag.getDerden().getFirst().getBurgerservicenummer().orElse(""));
     }
 
     @Test
@@ -266,17 +236,18 @@ class GezagsrelatieServiceTest {
         String minderjarige = BURGERSERVICENUMMER_ONE;
         String bevraagdePersoon = minderjarige;
         String ouder1 = BURGERSERVICENUMMER_TWO;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabetteMetOuder1());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerOuder1()).thenReturn(ouder1);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         GezamenlijkGezag gezag = (GezamenlijkGezag) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(ouder1, gezag.getOuder().get().getBurgerservicenummer());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
+        assertEquals(ouder1, gezag.getOuder().get().getBurgerservicenummer().orElse(""));
     }
 
     @Test
@@ -290,19 +261,24 @@ class GezagsrelatieServiceTest {
         String bevraagdePersoon = minderjarige;
         String ouder1 = BURGERSERVICENUMMER_TWO;
         String nietOuder = BURGERSERVICENUMMER_THREE;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabetteMetOuder1());
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
         when(gezagsBepalingMock.getBurgerservicenummerOuder1()).thenReturn(ouder1);
         when(gezagsBepalingMock.getBurgerservicenummerNietOuder()).thenReturn(nietOuder);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         GezamenlijkGezag gezag = (GezamenlijkGezag) gezagsRelaties.getFirst();
-        assertEquals(minderjarige, gezag.getMinderjarige().get().getBurgerservicenummer());
-        assertEquals(ouder1, gezag.getOuder().get().getBurgerservicenummer());
-        assertEquals(nietOuder, gezag.getDerde().map(it -> (BekendeDerde) it).get().getBurgerservicenummer().get());
+        assertEquals(minderjarige, gezag.getMinderjarige().getBurgerservicenummer());
+        assertEquals(ouder1, gezag.getOuder().flatMap(GezagOuder::getBurgerservicenummer).orElse(""));
+        var expectedNietOuder = gezag.getDerde()
+            .map(it -> (BekendeDerde) it)
+            .flatMap(BekendeDerde::getBurgerservicenummer)
+            .orElse("");
+        assertEquals(nietOuder, expectedNietOuder);
     }
 
     @Test
@@ -316,6 +292,7 @@ class GezagsrelatieServiceTest {
         String bevraagdePersoon = minderjarige;
         String ouder1 = BURGERSERVICENUMMER_TWO;
         String nietOuder = BURGERSERVICENUMMER_THREE;
+        when(gezagsBepalingMock.getPlPersoon()).thenReturn(Fixture.persoonslijstBabetteMetBeideOuders());
         when(gezagsBepalingMock.warenVeldenInOnderzoek()).thenReturn(true);
         when(gezagsBepalingMock.getBurgerservicenummer()).thenReturn(minderjarige);
         when(gezagsBepalingMock.getBurgerservicenummerPersoon()).thenReturn(bevraagdePersoon);
@@ -323,10 +300,65 @@ class GezagsrelatieServiceTest {
         when(gezagsBepalingMock.getBurgerservicenummerNietOuder()).thenReturn(nietOuder);
         GezagsBepaling gezagsBepaling = gezagsBepalingMock;
 
-        List<AbstractGezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
+        List<Gezagsrelatie> gezagsRelaties = classUnderTest.bepaalGezagsrelaties(arAntwoordenModel, gezagsBepaling);
 
         assertFalse(gezagsRelaties.isEmpty());
         GezamenlijkOuderlijkGezag gezag = (GezamenlijkOuderlijkGezag) gezagsRelaties.getFirst();
         assertTrue(gezag.getInOnderzoek().get());
+    }
+
+    private static class Fixture {
+        private static Persoonslijst persoonslijstBabette() {
+            var lo3PlPersoonRecord = new Lo3PlPersoonRecord();
+            lo3PlPersoonRecord.setBurgerServiceNr(Long.valueOf(BURGERSERVICENUMMER_ONE));
+            lo3PlPersoonRecord.setVoorNaam("Babette");
+            lo3PlPersoonRecord.setGeslachtsNaam("Boter");
+            lo3PlPersoonRecord.setGeslachtsAand("F");
+            lo3PlPersoonRecord.setGeboorteDatum(12122012);
+            var persoon = new Persoon(lo3PlPersoonRecord, null);
+
+            var result = new Persoonslijst();
+            result.setPersoon(persoon);
+            return result;
+        }
+
+        private static Persoonslijst persoonslijstBabetteMetOuder1() {
+            var result = persoonslijstBabette();
+            result.setOuder1(ouder1());
+            return result;
+        }
+
+        private static Persoonslijst persoonslijstBabetteMetOuder2() {
+            var result = persoonslijstBabette();
+            result.setOuder2(ouder2());
+            return result;
+        }
+
+        private static Persoonslijst persoonslijstBabetteMetBeideOuders() {
+            var result = persoonslijstBabette();
+            result.setOuder1(ouder1());
+            result.setOuder2(ouder2());
+            return result;
+        }
+
+        private static Ouder1 ouder1() {
+            var lo3PlPersoonRecord = new Lo3PlPersoonRecord();
+            lo3PlPersoonRecord.setBurgerServiceNr(Long.valueOf(BURGERSERVICENUMMER_TWO));
+            lo3PlPersoonRecord.setVoorNaam("Petra");
+            lo3PlPersoonRecord.setGeslachtsNaam("Pet");
+            lo3PlPersoonRecord.setGeslachtsAand("F");
+
+            return new Ouder1(lo3PlPersoonRecord, null);
+        }
+
+        private static Ouder2 ouder2() {
+            var lo3PlPersoonRecord = new Lo3PlPersoonRecord();
+            lo3PlPersoonRecord.setBurgerServiceNr(Long.valueOf(BURGERSERVICENUMMER_THREE));
+            lo3PlPersoonRecord.setVoorNaam("Bert");
+            lo3PlPersoonRecord.setGeslachtsNaam("Beter");
+            lo3PlPersoonRecord.setGeslachtsAand("M");
+
+            return new Ouder2(lo3PlPersoonRecord, null);
+        }
     }
 }
